bad/use_of_undefined_variable_in_method.example_compiler_output
ERROR
[1mbad/use_of_undefined_variable_in_method.lat:4:11: [1;31merror: [0;1muse of undeclared variable `y`[m
		int x = y;
		        [1;32m^[m
